--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
