--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "15.3.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
+    "pinyin": "^4.0.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
