--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sentry/nextjs": "^10.6.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -47,12 +48,14 @@
     "next": "15.3.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "pinyin": "^4.0.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
