--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "emoji-mart": "^5.6.0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.523.0",
+    "mermaid": "^11.11.0",
     "minio": "^8.0.5",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
@@ -70,6 +71,7 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/formidable": "^3.4.5",
+    "@types/mermaid": "^9.1.0",
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
